2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/12_fElsifSanselse.deca
// Description:
//    Programme  if dont la condition est un boolean un seul else if sans else à la fin .
//
// Resultats:
//      programme correcte syntaxiquement 
//
// Historique:
//    cree le 09/01/2024
{
    int x;
    if(true)
    {
        print("je suis dans if");
    }else if(false)
    {
        x =2;
    }
}