2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/27_FAnd.deca
// Description:
//    tests de programme incorrect syntaxiquement ,And incorrecte car membre gauche n'est pas and_expr
//
// Resultats:
//    ligne 12 : Erreur, extraneous input ',''
//
// Historique:
//    cree le 09/01/2024
{
    boolean x =true;
    x = false;
    x = x && ,5; 
}